# module-gateway

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMLibStorage.cmake  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  main.py  period_checker.py  requirements.txt  run_all.py  run_external_client.py  run_internal_server.py  run_modules.py
cmake/: Dependencies.cmake
config/: config.json
configs/: README.md  default.json  example.json
include/bringauto/aeron_communication/: AeronClient.hpp  AeronDriver.hpp
include/bringauto/common_utils/: EnumUtils.hpp  MemoryUtils.hpp  ProtobufUtils.hpp  ProtocolUtils.hpp  StringUtils.hpp
include/bringauto/external_client/: ErrorAggregator.hpp  ExternalClient.hpp
include/bringauto/internal_server/: ConnectedDevices.hpp  InternalServer.hpp
include/bringauto/modules/: Buffer.hpp  ErrorAggregator.hpp  IModuleManagerLibraryHandler.hpp  ModuleBinaryException.hpp  ModuleHandler.hpp  ModuleManagerLibraryHandler.hpp  ModuleManagerLibraryHandlerAsync.hpp  ModuleManagerLibraryHandlerLocal.hpp  StatusAggregator.hpp  library_loader.hpp
include/bringauto/settings/: Constants.hpp  LoggerId.hpp  LoggerWrapper.hpp  QuicSettingsParser.hpp  Settings.hpp  SettingsParser.hpp
include/bringauto/structures/: AtomicQueue.hpp  Connection.hpp  ConnectionContext.hpp  DeviceIdentification.hpp  ExternalConnectionSettings.hpp  GlobalContext.hpp  InternalClientMessage.hpp  LoggingSettings.hpp  ModuleHandlerMessage.hpp  ModuleLibrary.hpp  ReconnectQueueItem.hpp  StatusAggregatorDeviceState.hpp  ThreadTimer.hpp
include/bringauto/utils/: utils.hpp
lib/memory_management/: README.md
lib/memory_management/src/: memory_management.cpp
libs/button_module/: CMakeLists.txt  README.md
libs/button_module/src/: module_manager.cpp
libs/memory_management/: CMakeLists.txt
libs/memory_management/src/: memory_management.cpp
libs/mission_module/: CMakeLists.txt
libs/mission_module/src/: module_manager.cpp
module_gateway/: __init__.py  response_type.py  server.py  utils.py
module_gateway/external_client/: Dockerfile  ExternalClient.py  __init__.py  device.py  external_client.py  ipc_communication.py
module_gateway/external_client/config/: __init__.py  config.py  endpoint.py  module_config.py
module_gateway/external_client/connection/: __init__.py  connection_channel.py  exceptions.py  external_connection.py
module_gateway/external_client/error_aggregator/: __init__.py  device_error_aggregator.py  error_aggregator.py
module_gateway/external_client/event_queue/: __init__.py  event.py  priority_queue_singleton.py
module_gateway/external_client/utils/: __init__.py  misc.py  ordered_enum.py  proto_helpers.py
module_gateway/internal_server/: Dockerfile  __init__.py  server.py
module_gateway/internal_server/modules/: __init__.py  module_helper.py  module_type.py
module_gateway/module_handler/: Dockerfile  __init__.py  module_handler.py  modules_manager.py
module_gateway/module_handler/modules/: __init__.py  car_accessory_module.py  mission_module.py
module_gateway/modules/: __init__.py  enum_has_type.py  message_creator.py  message_parser.py  module_helper.py  module_type.py
module_gateway/modules/car_accessory_module/: car_accessory_creator.py  car_accessory_type.py
module_gateway/modules/mission_module/: mission_creator.py  mission_type.py
module_gateway/period_checker/: Dockerfile
module_gateway/protobuf/: ExternalProtocol_pb2.py
resources/config/: README.md  default.json  example.json  for_docker.json  quic_example.json
resources/systemd/: module-gateway.service.in
source/bringauto/aeron_communication/: AeronClient.cpp  AeronDriver.cpp
source/bringauto/common_utils/: EnumUtils.cpp  ProtobufUtils.cpp  ProtocolUtils.cpp  StringUtils.cpp
source/bringauto/external_client/: ErrorAggregator.cpp  ExternalClient.cpp
source/bringauto/internal_server/: ConnectedDevices.cpp  InternalServer.cpp
source/bringauto/modules/: IModuleManagerLibraryHandler.cpp  ModuleHandler.cpp  ModuleManagerLibraryHandler.cpp  ModuleManagerLibraryHandlerAsync.cpp  ModuleManagerLibraryHandlerLocal.cpp  StatusAggregator.cpp  library_loader_production.cpp
source/bringauto/modules/memory_management/: CMakeLists.txt
source/bringauto/modules/memory_management/source/: memory_management.cpp
source/bringauto/settings/: LoggerId.cpp  QuicSettingsParser.cpp  SettingsParser.cpp
source/bringauto/structures/: DeviceIdentification.cpp  InternalClientMessage.cpp  ModuleHandlerMessage.cpp  ModuleLibrary.cpp  StatusAggregatorDeviceState.cpp  ThreadTimer.cpp
src/bringauto/common_utils/: EnumUtils.cpp  MemoryUtils.cpp  ProtocolUtils.cpp
src/bringauto/external_client/: ErrorAggregator.cpp  ExternalClient.cpp
src/bringauto/internal_server/: InternalServer.cpp  InternalSever.cpp
src/bringauto/modules/: ErrorAggregator.cpp  ModuleHandler.cpp  ModuleManagerLibraryHandler.cpp  StatusAggregator.cpp
src/bringauto/settings/: Constatns.cpp  SettingsParser.cpp
src/bringauto/structures/: DeviceIdentification.cpp  InternalClientMessage.cpp  ModuleLibrary.cpp  StatusAggregatorDeviceState.cpp  (+1 more)
test/: CMakeLists.txt  README.md
test/include/: ErrorAggregatorTests.hpp  ExternalConnectionTests.hpp  InternalServerTests.hpp  SettingsParserTests.hpp  StatusAggregatorTests.hpp
test/include/testing_utils/: CommunicationMock.hpp  ConfigMock.hpp  DeviceIdentificationHelper.h  InternalClientForTesting.hpp  ModuleHandlerForTesting.hpp  ProtobufUtils.hpp  TestHandler.hpp
test/source/: EnumUtilsTests.cpp  ErrorAggregatorTests.cpp  ExternalConnectionTests.cpp  InternalServerTests.cpp  SettingsParserTests.cpp  StatusAggregatorTests.cpp  library_loader_test.cpp
test/source/testing_utils/: CommunicationMock.cpp  DeviceIdentificationHelper.cpp  InternalClientForTesting.cpp  ModuleHandlerForTesting.cpp  ProtobufUtils.cpp  TestHandler.cpp
test/src/: ErrorAggregatorTests.cpp  InternalServerTests.cpp  StatusAggregatorTests.cpp
test/src/testing_utils/: InternalClientForTesting.cpp  ModuleHandlerForTesting.cpp  ProtobufUtils.cpp  TestHandler.cpp
(+31 files in other folders)
